# deluge-sync

./: Dockerfile  README.md  deluge-sync.py  deluge.ini  dev-requirements.txt  manifest.yml  pyproject.toml  requirements.txt
.bin/: format-code  lint-code  update-requirements
.docker/: entrypoint.sh
.github/workflows/: docker.yml
src/deluge_sync/: __init__.py  __main__.py  cli.py  client.py  utils.py
